# Light_beam_with_slices_simulation

./: CMakeLists.txt  README.md  main.cpp  requirements.txt
include/: LightSimulation.hpp
scripts/: generate_materials.py  generate_materials_domain.py  process_image.py  run_simulation_batch.sh
src/: LightSimulation.cpp
